--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 .card {
   margin-bottom: 20px;
 }
@@ -147,3 +149,12 @@
   font-size: 100px;
 
 }
+
+
+.star-wars-title {
+  margin-bottom: 40px;
+  font-size: 2.5em;
+  color: yellow;
+  text-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700, 0 0 30px #FFD700, 0 0 40px #FFA500, 0 0 70px #FFA500, 0 0 80px #FFA500, 0 0 100px #FFA500, 0 0 150px #FFA500;
+}
+
